local-modules/hostfirewall/files/rules.v4
# Managed by puppet
# Generated by iptables-save v1.4.14 on Fri Dec  5 03:24:27 2014
*mangle
:PREROUTING ACCEPT [43425:7584379]
:INPUT ACCEPT [7310:607022]
:FORWARD ACCEPT [36115:6977357]
:OUTPUT ACCEPT [7395:738643]
:POSTROUTING ACCEPT [43445:7710280]
COMMIT
# Completed on Fri Dec  5 03:24:27 2014
# Generated by iptables-save v1.4.14 on Fri Dec  5 03:24:27 2014
*nat
:PREROUTING ACCEPT [2462:90112]
:INPUT ACCEPT [2137:70387]
:OUTPUT ACCEPT [571:108361]
:POSTROUTING ACCEPT [717:44348]
-A PREROUTING -p tcp -m tcp --dport 8140 -j DNAT --to-destination 10.0.0.1:8140
-A PREROUTING -p tcp -m tcp --dport 2201 -j DNAT --to-destination 10.0.0.1:22
-A PREROUTING -p tcp -m tcp -d 37.59.63.122 --dport 80 -j DNAT --to-destination 10.0.0.4:80
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Dec  5 03:24:27 2014
# Generated by iptables-save v1.4.14 on Fri Dec  5 03:24:27 2014
*filter
:INPUT ACCEPT [1467:115521]
:FORWARD ACCEPT [5945:801520]
:OUTPUT ACCEPT [1500:133480]
-A FORWARD -m physdev --physdev-out vif9.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -p udp -m physdev --physdev-in vif9.0 --physdev-is-bridged -m udp --sport 68 --dport 67 -j ACCEPT
-A FORWARD -m physdev --physdev-out vif9.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -s 10.0.0.4/32 -m physdev --physdev-in vif9.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -m physdev --physdev-out vif8.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -p udp -m physdev --physdev-in vif8.0 --physdev-is-bridged -m udp --sport 68 --dport 67 -j ACCEPT
-A FORWARD -m physdev --physdev-out vif8.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -s 10.0.0.3/32 -m physdev --physdev-in vif8.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -m physdev --physdev-out vif5.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -p udp -m physdev --physdev-in vif5.0 --physdev-is-bridged -m udp --sport 68 --dport 67 -j ACCEPT
-A FORWARD -m physdev --physdev-out vif5.0 --physdev-is-bridged -j ACCEPT
-A FORWARD -s 10.0.0.1/32 -m physdev --physdev-in vif5.0 --physdev-is-bridged -j ACCEPT
COMMIT
# Completed on Fri Dec  5 03:24:27 2014
